--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -24,22 +24,22 @@
               </div>
             </div>
             <div class="tab-chart">
-              <tabset>
-                <tab>
-                  <tab-heading class="duration">
+              <uib-tabset>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-uppercase">duration</p>
                       <p class="price">1 month</p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
                       <p class="price">Rs 9900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
+                  </uib-tab-heading>
                   <div class="chart-info">
                     <div class="tab-head">
                       <p class="brand-brown-dark text-justify">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
@@ -74,14 +74,14 @@
                       </div>
                     </div>
                   </div>
-                </tab>
-                <tab>
-                  <tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
                       <p class="price">Rs 17900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
+                  </uib-tab-heading>
                   <div class="chart-info">
                     <div class="tab-head">
                       <p class="brand-brown-dark text-justify">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
@@ -116,14 +116,14 @@
                       </div>
                     </div>
                   </div>
-                </tab>
-                <tab>
-                  <tab-heading class="duration">
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-uppercase">diamond</p>
                       <p class="price">Rs 27900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
+                  </uib-tab-heading>
                   <div class="chart-info">
                     <div class="tab-head">
                       <p class="brand-brown-dark text-justify">Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
@@ -158,8 +158,8 @@
                       </div>
                     </div>
                   </div>
-                </tab>
-              </tabset>
+                </uib-tab>
+              </uib-tabset>
             </div>
           </div>
           <div class="healthchart-list">
@@ -170,40 +170,40 @@
               </div>
             </div>
             <div class="tab-chart">
-              <tabset>
-                <tab>
-                  <tab-heading class="duration">
+              <uib-tabset>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-uppercase">duration</p>
                       <p class="price">2 month</p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading class="duration">
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
                       <p class="price">Rs 18900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading class="duration">
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
                       <p class="price">Rs 33900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading class="duration">
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
                       <p class="price">Rs 47900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-              </tabset>
+                  </uib-tab-heading>
+                </uib-tab>
+              </uib-tabset>
             </div>
           </div>
           <div class="healthchart-list">
@@ -214,40 +214,40 @@
               </div>
             </div>
             <div class="tab-chart">
-              <tabset>
-                <tab>
-                  <tab-heading class="duration">
+              <uib-tabset>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">duration</p>
                       <p class="price">4 month</p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading class="duration">
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
                       <p class="price">Rs 34900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading class="duration">
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
                       <p class="price">Rs 59900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading class="duration">
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
                       <p class="price">Rs 77900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-              </tabset>
+                  </uib-tab-heading>
+                </uib-tab>
+              </uib-tabset>
             </div>
           </div>
           <div class="healthchart-list">
@@ -258,39 +258,39 @@
               </div>
             </div>
             <div class="tab-chart">
-              <tabset>
-                <tab>
-                  <tab-heading class="duration">
+              <uib-tabset>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">duration</p>
                       <p class="price">6 month</p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading class="duration">
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
                       <p class="price">Rs 49900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading class="duration">
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
                       <p class="price">Rs 89900<sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading class="duration">
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
                       <p class="price">Rs 99900<sup>*</sup></p>
-                  </tab-heading>
-                </tab>
-              </tabset>
+                  </uib-tab-heading>
+                </uib-tab>
+              </uib-tabset>
               </div>
             </div>
           </div>
@@ -298,12 +298,20 @@
       </div>
       <div class="slider-round">
         <uib-carousel interval="myInterval" no-wrap="noWrapSlides">
-          <uib-slide ng-repeat="slide in heathdetail" active="slide.active">
+          <uib-slide ng-repeat="slide in healthdetail" active="slide.active">
             <div class="healthmanagement-slider">
               <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4" ng-repeat="detail in slide">
                   <figure>
-                  <div class="slide-imghold category-imghold round">
+                  <div class="slide-imghold round m-center">
+                    <img ng-src="{{detail.img}}" alt="" class="img-responsive">
+                  </div>
+                  <figcaption class="text-uppercase brand-brown-dark text-bold">{{detail.caption}}</figcaption>
+                  </figure>
+                </div>
+                <!-- <div class="col-md-4">
+                  <figure>
+                  <div class="slide-imghold round m-center">
                     <img ng-src="{{slide.img}}" alt="" class="img-responsive">
                   </div>
                   <figcaption class="text-uppercase brand-brown-dark text-bold">{{slide.caption}}</figcaption>
@@ -311,21 +319,13 @@
                 </div>
                 <div class="col-md-4">
                   <figure>
-                  <div class="slide-imghold category-imghold round">
+                  <div class="slide-imghold round m-center">
                     <img ng-src="{{slide.img}}" alt="" class="img-responsive">
                   </div>
                   <figcaption class="text-uppercase brand-brown-dark text-bold">{{slide.caption}}</figcaption>
                   </figure>
                 </div>
-                <div class="col-md-4">
-                  <figure>
-                  <div class="slide-imghold category-imghold round">
-                    <img ng-src="{{slide.img}}" alt="" class="img-responsive">
-                  </div>
-                  <figcaption class="text-uppercase brand-brown-dark text-bold">{{slide.caption}}</figcaption>
-                  </figure>
-                </div>
-              </div>
+              </div> -->
             </div>
           </uib-slide>
         </uib-carousel>
