--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -23,24 +23,24 @@
               </div>
             </div>
             <div class="tab-chart">
-              <tabset>
-                <tab>
-                  <tab-heading>
+              <uib-tabset>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">duration</p>
                       <p class="price">8-10
                         <span>weeks</span>
                       </p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
                       <p class="price">Rs 14900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
+                  </uib-tab-heading>
                   <div class="chart-info">
                     <div class="tab-head">
                       <p>Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
@@ -75,14 +75,14 @@
                       </div>
                     </div>
                   </div>
-                </tab>
-                <tab>
-                  <tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
                       <p class="price">Rs 27900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
+                  </uib-tab-heading>
                   <div class="chart-info">
                     <div class="tab-head">
                       <p>Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
@@ -117,14 +117,14 @@
                       </div>
                     </div>
                   </div>
-                </tab>
-                <tab>
-                  <tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
                       <p class="price">Rs 37900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
+                  </uib-tab-heading>
                   <div class="chart-info">
                     <div class="tab-head">
                       <p>Learn the essentials of a healthy way of life and find out what works the best for you. Shed that extra five kilos by opting for our basic Gold Plan where the first consultation is with Suman and follow ups will be conducted by expert
@@ -159,8 +159,8 @@
                       </div>
                     </div>
                   </div>
-                </tab>
-              </tabset>
+                </uib-tab>
+              </uib-tabset>
             </div>
           </div>
           <div class="healthchart-list">
@@ -172,42 +172,42 @@
               </div>
             </div>
             <div class="tab-chart">
-              <tabset>
-                <tab>
-                  <tab-heading>
+              <uib-tabset>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">duration</p>
                       <p class="price">16-20
                         <span>weeks</span>
                       </p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
                       <p class="price">Rs 27900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
                       <p class="price">Rs 52900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
                       <p class="price">Rs 68900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-              </tabset>
+                  </uib-tab-heading>
+                </uib-tab>
+              </uib-tabset>
             </div>
           </div>
           <div class="healthchart-list">
@@ -219,42 +219,42 @@
               </div>
             </div>
             <div class="tab-chart">
-              <tabset>
-                <tab>
-                  <tab-heading>
+              <uib-tabset>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">duration</p>
                       <p class="price">24-30
                         <span>weeks</span>
                       </p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
                       <p class="price">Rs 40900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
                       <p class="price">Rs 74900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
                       <p class="price">Rs 97900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-              </tabset>
+                  </uib-tab-heading>
+                </uib-tab>
+              </uib-tabset>
             </div>
           </div>
           <div class="healthchart-list">
@@ -266,42 +266,42 @@
               </div>
             </div>
             <div class="tab-chart">
-              <tabset>
-                <tab>
-                  <tab-heading>
+              <uib-tabset>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">duration</p>
                       <p class="price">32-40
                         <span>weeks</span>
                       </p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">gold</p>
                       <p class="price">Rs 52900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">platinum</p>
                       <p class="price">Rs 95900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-                <tab>
-                  <tab-heading>
+                  </uib-tab-heading>
+                </uib-tab>
+                <uib-tab>
+                  <uib-tab-heading>
                     <div class="chart-head ">
                       <p class="white text-uppercase">diamond</p>
                       <p class="price">Rs 125900 <sup>*</sup></p>
                     </div>
-                  </tab-heading>
-                </tab>
-              </tabset>
+                  </uib-tab-heading>
+                </uib-tab>
+              </uib-tabset>
             </div>
           </div>
         </div>
