--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -76,12 +76,12 @@
                       </div>
 
                       <div class="col-md-6">
-                        <div class="inner-view">
+                        <div class="inner-view-left">
                           <div class="get-round view-left">
                             <span class="text-uppercase brand-brown-dark-bg">Lost</span>
-                            <span>{{view.weight}}kgs</span>
+                            <span class="font-vista">{{view.weight}}kgs</span>
                           </div>
-                          <span class="name text-left brand-brown-dark font-semibold">{{view.name}}</span>
+                          <span class="name text-left brand-brown-dark font-semibold">{{view.name}}</span><br>
                           <span class="location text-left white">{{view.location}}</span>
                         </div>
                         <div class="view-detail">
@@ -98,13 +98,13 @@
                   <div class="single-view text-center brand-brown-bg">
                     <div class="row">
                       <div class="col-md-6">
-                        <div class="inner-view">
+                        <div class="inner-view-right">
                           <div class="get-round pull-right view-right">
                             <span class="text-uppercase brand-brown-dark-bg">Lost</span>
-                            <span>{{view.weight}}kgs</span>
+                            <span class="font-vista">{{view.weight}}kgs</span>
                           </div>
-                          <span class="name text-left brand-brown-dark font-semibold">{{view.name}}</span>
-                          <span class="location text-left white">{{view.location}}</span>
+                          <span class="name text-right brand-brown-dark font-semibold">{{view.name}}</span><br>
+                          <span class="location text-right white">{{view.location}}</span>
                         </div>
                         <div class="view-detail">
                           <span class="title text-left brand-brown-dark">{{view.title}}</span>
@@ -154,7 +154,7 @@
                         </div>
                         <div class="get-round img-left">
                           <span class="text-uppercase brand-brown-dark-bg">Lost</span>
-                          <span>{{read.weight}}kgs</span>
+                          <span class="font-vista">{{read.weight}}kgs</span>
                         </div>
                       </div>
                     </div>
@@ -172,7 +172,7 @@
                         </div>
                         <div class="get-round img-right">
                           <span class="text-uppercase brand-brown-dark-bg">Lost</span>
-                          <span>{{read.weight}}kgs</span>
+                          <span class="font-vista">{{read.weight}}kgs</span>
                         </div>
                       </div>
 
