--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -306,7 +306,7 @@
                   <div class="slide-imghold round m-center">
                     <img ng-src="{{detail.img}}" alt="" class="img-responsive">
                   </div>
-                  <figcaption class="text-uppercase brand-brown-dark text-bold">{{detail.caption}}</figcaption>
+                  <figcaption class="text-uppercase brand-brown-dark text-bold letter-space">{{detail.caption}}</figcaption>
                   </figure>
                 </div>
                 <!-- <div class="col-md-4">
