--- a/views/footer.html
+++ b/views/footer.html
@@ -7,12 +7,12 @@
                         <li><a href="" title="Home">home</a></li>
                         <li><a href="" title="Cool Sclupting">Cool Sclupting</a></li>
                         <li><a href="" title="Nutrigenomics">Nutrigenomics</a></li>
-                        <li><a href="" title="Image Consulting">Image Consulting</a></li>
-                        <li><a href="" title="Success Stories">Success Stories</a></li>
-                        <li><a href="" title="News">News</a></li>
+                        <li><a href="#/imageconsulting" title="Image Consulting">Image Consulting</a></li>
+                        <li><a href="#successstories" title="Success Stories">Success Stories</a></li>
+                        <li><a href="#/news" title="News">News</a></li>
                         <li><a href="" title="Blog">Blog</a></li>
                         <li><a href="" title="Careers">Careers</a></li>
-                        <li><a href="" title="Contact">Contact</a></li>
+                        <li><a href="#contactus" title="Contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -21,8 +21,8 @@
                     <h5 class="text-uppercase brand-primary-lighter letter-space">Health Packages</h5>
                     <div class="submenu text-uppercase">
                         <ul>
-                            <li><a href="" title="Weight Loss">Weight Loss</a></li>
-                            <li> <a href="" title="Health Management">Health Management</a></li>
+                            <li><a href="#/weightmanagement" title="Weight Loss">Weight Loss</a></li>
+                            <li> <a href="#/healthmanagement" title="Health Management">Health Management</a></li>
                         </ul>
                     </div>
                 </div>
@@ -30,9 +30,9 @@
                     <h5 class="text-uppercase brand-primary-lighter letter-space">About</h5>
                     <div class="submenu text-uppercase">
                         <ul>
-                            <li><a href="" title="About Selfcare">About Selfcare</a></li>
-                            <li> <a href="" title="Meet Suman Agarwal">Meet Suman Agarwal</a></li>
-                            <li> <a href="" title="The Self Care Team">The Self Care Team</a></li>
+                            <li><a href="#/aboutus" title="About Selfcare">About Selfcare</a></li>
+                            <li> <a href="#/meet" title="Meet Suman Agarwal">Meet Suman Agarwal</a></li>
+                            <li> <a href="#/team" title="The Self Care Team">The Self Care Team</a></li>
                         </ul>
                     </div>
                 </div>
