--- a/views/content/healthmanagement.html
+++ b/views/content/healthmanagement.html
@@ -16,7 +16,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="">
+              <a href="#/healthmanagementdetail">
                 <div class="category-imghold  round">
                   <img src="img/health/ailment.png" alt="" class="img-responsive">
                 </div>
@@ -28,7 +28,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="">
+              <a href="#/healthmanagementdetail">
                 <div class="category-imghold round">
                   <img src="img/health/ageing.png" alt="" class="img-responsive">
                 </div>
@@ -40,7 +40,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="">
+              <a href="#/healthmanagementdetail">
                 <div class="category-imghold round">
                   <img src="img/health/lactation.png" alt="" class="img-responsive">
                 </div>
@@ -52,7 +52,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="">
+              <a href="#/healthmanagementdetail">
                 <div class="category-imghold round">
                   <img src="img/health/senior.png" alt="" class="img-responsive">
                 </div>
@@ -64,7 +64,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="">
+              <a href="#/healthmanagementdetail">
                 <div class="category-imghold round">
                   <img src="img/health/kids.png" alt="" class="img-responsive">
                 </div>
@@ -78,7 +78,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="">
+              <a href="#/healthmanagementdetail">
                 <div class="category-imghold round">
                   <img src="img/health/pregnancy.png" alt="" class="img-responsive">
                 </div>
@@ -90,7 +90,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="">
+              <a href="#/healthmanagementdetail">
                 <div class="category-imghold round">
                   <img src="img/health/weight-gain.png" alt="" class="img-responsive">
                 </div>
@@ -102,7 +102,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="">
+              <a href="#/healthmanagementdetail">
                 <div class="category-imghold round">
                   <img src="img/health/loss.png" alt="" class="img-responsive">
                 </div>
@@ -114,7 +114,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="">
+              <a href="#/healthmanagementdetail">
                 <div class="category-imghold round">
                   <img src="img/health/suclpting.png" alt="" class="img-responsive">
                 </div>
@@ -126,7 +126,7 @@
         <div class="col-flex">
           <div class="managecat text-center">
             <figure>
-              <a href="">
+              <a href="#/healthmanagementdetail">
                 <div class="category-imghold round">
                   <img src="img/health/cancer.png" alt="" class="img-responsive">
                 </div>
