--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -29,7 +29,7 @@
                   <uib-tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-uppercase">duration</p>
-                      <p class="price">1 month</p>
+                      <p class="price text-capitalize">1 month</p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
@@ -175,7 +175,7 @@
                   <uib-tab-heading class="duration">
                     <div class="chart-head">
                       <p class="white text-uppercase">duration</p>
-                      <p class="price">2 month</p>
+                      <p class="price text-capitalize">2 months</p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
@@ -219,7 +219,7 @@
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">duration</p>
-                      <p class="price">4 month</p>
+                      <p class="price text-capitalize">4 months</p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
@@ -263,7 +263,7 @@
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
                       <p class="white text-uppercase">duration</p>
-                      <p class="price">6 month</p>
+                      <p class="price text-capitalize">6 months</p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
