--- a/views/content/home.html
+++ b/views/content/home.html
@@ -120,15 +120,15 @@
             </div>
             <div class="col-md-6">
               <div class="view-detail relate">
-                <h4 class="text-left brand-brown-dark name font-semibold">{{slide.name}}</h4>
+                <h4 class="text-left brand-brown-dark name font-semibold letter-space">{{slide.name}}</h4>
                 <span class="text-left block brand-primary letter-space">{{slide.location}}</span>
                 <div class="descp brand-primary">
                   <p class="text-justify">{{slide.descp}}</p>
                 </div>
-                <div class="get-round weight-info text-center">
+                  <div class="get-round weight-info text-center">
                   <span class="text-uppercase brand-brown-dark-bg">Lost</span>
                   <br>
-                  <span class="weight-count">{{slide.weight}}kgs</span>
+                  <span class="weight-count font-vista">{{slide.weight}}kgs</span>
                 </div>
               </div>
             </div>
