--- a/sass/main.scss
+++ b/sass/main.scss
@@ -229,7 +229,7 @@ img {
   opacity: 0;
   @include transition(all 300ms ease);
 }
-img.doneLoading {
+img.doneLoading, img.fancybox-image {
   opacity: 1;
 }
 nav li:hover .dropdown-menu {
@@ -445,6 +445,7 @@ button {
     .know-more {
       position: relative;
       top: 20px;
+      font-weight: bold;
     }
     .health-imgholder {
       width: 270px;
@@ -615,7 +616,7 @@ button {
     border-bottom: 2px solid $brand-brown;
     p {
       width: 82%;
-      font-size: 20px;
+      font-size: 22px;
       @extend.text-lighter;
     }
   }
@@ -1293,7 +1294,7 @@ footer {
 }
 .health-foot {
   .health-back {
-    min-height: 200px;
+    min-height: 150px;
   }
   .package {
     background: url(../img/foot-healthpack.jpg) no-repeat;
