--- a/views/content/contactus.html
+++ b/views/content/contactus.html
@@ -1,7 +1,7 @@
 <section>
   <div class="selfcare-image">
     <img src="img/apple.jpg" alt="">
-    <h2 class="text-uppercase get-center white font-semibold">Contact Us</h2>
+    <h2 class="text-uppercase get-center white font-gotham contact-title">Contact Us</h2>
   </div>
 
   <div class="contact-location">
@@ -36,7 +36,7 @@
               <br>
               <span>Landmark opposite 'Jalsa'</span>
               <br>
-              <span>t: <a href="tel:9819725206">9819725206</a>, <a href="tel:+912226142435">+91 22-26142435</a>, <a href="tel:+912226109432">+91 22-26109432</a></span>
+              <span>t: <a href="tel:9819725206">9819725206</a>, <a href="tel:+912226142435">+91 22-26142435</a>,<br><a href="tel:+912226109432" class="san-num">+91 22-26109432</a></span>
               <br>
               <a href="" class="text-uppercase brand-teal">View Map</a>
             </div>
