--- a/views/content/home.html
+++ b/views/content/home.html
@@ -81,7 +81,7 @@
                   <span class="block count">Weight Loss</span>
                 </h5>
                 <h3 class="health-count text-left white text-bold">7500
-                  <span>in kgs</span>
+                  <span class="font-primary">in kgs</span>
                 </h3>
               </div>
               <div class="icon inline-block">
