--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -5,48 +5,49 @@
   </div>
 
   <div class="brand-primary-bg people-info">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-offset-1 col-md-10">
-        <div class="row">
-          <div class="col-md-4">
-            <div class="info text-center">
-              <div class=" inline-block v-top">
-                <h5 class="text-uppercase text-bold brand-brown-dark health-title">Total number of
-                  <span class="block">Clients</span>
-                </h5>
-                <h3 class="health-count text-left white text-bold">10348</h3>
-              </div>
-              <div class="icon inline-block v-top">
-                <img src="img/user.png" alt="" class="img-responsive">
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="info  text-center">
-              <div class="inline-block v-top">
-                <h5 class="text-uppercase text-bold brand-brown-dark health-title">Total
-                  <span class="block count">Weight Loss</span>
-                </h5>
-                <h3 class="health-count text-left white text-bold">7500
-                  <span>in kgs</span>
-                </h3>
-              </div>
-              <div class="icon inline-block">
-                <img src="img/weight-meter.png" alt="" class="img-responsive">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-offset-1 col-md-10">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="info text-center">
+                <div class=" inline-block v-top">
+                  <h5 class="text-uppercase text-bold brand-brown-dark font-semibold health-title">Total number of
+                    <span class="block">Clients</span>
+                  </h5>
+                  <h3 class="health-count text-left white text-bold">10348</h3>
+                </div>
+                <div class="icon inline-block v-top">
+                  <img src="img/user.png" alt="" class="img-responsive">
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-4">
-            <div class="info  text-center">
-              <div class="inline-block v-top">
-                <h5 class="text-uppercase text-bold  brand-brown-dark health-title">Presence in
-                  <span class="block">Countries</span>
-                </h5>
-                <h3 class="health-count text-left white text-bold">38</h3>
+            <div class="col-md-4">
+              <div class="info  text-center people-weight-count">
+                <div class="inline-block v-top">
+                  <h5 class="text-uppercase text-bold brand-brown-dark font-semibold health-title">Total
+                    <span class="block count">Weight Loss</span>
+                  </h5>
+                  <h3 class="health-count text-left white text-bold">7500
+                    <span class="font-primary">in kgs</span>
+                  </h3>
+                </div>
+                <div class="icon inline-block">
+                  <img src="img/weight-meter.png" alt="" class="img-responsive">
+                </div>
               </div>
-              <div class="icon inline-block">
-                <img src="img/world.png" alt="" class="img-responsive">
+            </div>
+            <div class="col-md-4">
+              <div class="info  text-center no-border">
+                <div class="inline-block v-top">
+                  <h5 class="text-uppercase text-bold  brand-brown-dark font-semibold health-title">Presence in
+                    <span class="block">Countries</span>
+                  </h5>
+                  <h3 class="health-count text-left white text-bold">38</h3>
+                </div>
+                <div class="icon inline-block">
+                  <img src="img/world.png" alt="" class="img-responsive">
+                </div>
               </div>
             </div>
           </div>
@@ -54,7 +55,6 @@
       </div>
     </div>
   </div>
-</div>
 
   <div class="stories-section">
     <div class="container">
