--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -19,7 +19,7 @@
               <div class="get-round">
                 <span class="text-uppercase brand-brown-dark-bg">loose</span>
                 <br>
-                <span class="weight-count">5 kgs</span>
+                <span class="weight-count font-vista">5 kgs</span>
               </div>
             </div>
             <div class="tab-chart">
@@ -168,7 +168,7 @@
               <div class="get-round">
                 <span class="text-uppercase brand-brown-dark-bg">loose</span>
                 <br>
-                <span class="weight-count">10 kgs</span>
+                <span class="weight-count font-vista">10 kgs</span>
               </div>
             </div>
             <div class="tab-chart">
@@ -215,7 +215,7 @@
               <div class="get-round">
                 <span class="text-uppercase brand-brown-dark-bg">loose</span>
                 <br>
-                <span class="weight-count">15 kgs</span>
+                <span class="weight-count font-vista">15 kgs</span>
               </div>
             </div>
             <div class="tab-chart">
@@ -262,7 +262,7 @@
               <div class="get-round">
                 <span class="text-uppercase brand-brown-dark-bg">loose</span>
                 <br>
-                <span class="weight-count">20 kgs</span>
+                <span class="weight-count font-vista">20 kgs</span>
               </div>
             </div>
             <div class="tab-chart">
