--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1198,6 +1198,7 @@ button {
   .coupon {
     padding: 10px;
     border-top: 1px solid $brand-primary;
+    margin-bottom: 15px;
     font-size: 16px;
   }
   .price-ship {
