--- a/views/content/successstories.html
+++ b/views/content/successstories.html
@@ -85,7 +85,7 @@
                           <span class="location text-left white">{{view.location}}</span>
                         </div>
                         <div class="view-detail">
-                          <span class="title text-left brand-brown-dark">{{view.title}}</span>
+                          <span class="title text-justify brand-brown-dark">{{view.title}}</span>
                         </div>
                       </div>
                     </div>
@@ -107,7 +107,7 @@
                           <span class="location text-right white">{{view.location}}</span>
                         </div>
                         <div class="view-detail">
-                          <span class="title text-left brand-brown-dark">{{view.title}}</span>
+                          <span class="title text-justify brand-brown-dark">{{view.title}}</span>
                         </div>
                       </div>
 
@@ -144,7 +144,7 @@
                             </div>
                           </div>
                           <hr>
-                          <p class="text-left brand-brown-dark" ng-bind-html="read.desc"></p>
+                          <p class="text-justify brand-brown-dark" ng-bind-html="read.desc"></p>
                         </div>
                       </div>
 
@@ -180,15 +180,15 @@
                         <div class="read-detail right">
                           <div class="row">
                             <div class="col-md-5">
-                              <span class="name text-left font-semibold brand-brown-dark">{{read.name}}</span>
+                              <span class="name text-left font-semibold brand-brown-dark">{{read.name}}</span><br>
                               <span class="location text-left white">{{read.location}}</span>
                             </div>
                             <div class="col-md-7">
-                              <span class="title text-right white font-semibold">{{read.title}}</span>
+                              <span class="title title-right text-right white font-semibold">{{read.title}}</span>
                             </div>
                           </div>
                           <hr>
-                          <p class="text-left brand-brown-dark" ng-bind-html="read.desc"></p>
+                          <p class="text-justify brand-brown-dark" ng-bind-html="read.desc"></p>
                         </div>
                       </div>
                     </div>
